manifests/media-stack/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: homeserver
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          ports:
            - containerPort: 32400
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 3000m
              memory: 6Gi
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: plex-media
              mountPath: /data
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: plex-media
          persistentVolumeClaim:
            claimName: global-media-pvc
