manifests/media-stack/plex/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
