manifests/media-stack/plex/plex-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingressroute
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`plex.janikhenz.ch`)
      kind: Rule
      services:
        - name: plex-service
          port: 32400
